home hero spacing fix

--- a/_sass/template/components/_component--home.scss
+++ b/_sass/template/components/_component--home.scss
@@ -21,10 +21,13 @@
 // ----------------------------------------------------------------------------
 
 .home--hero-wrapper {
-	margin-top: 64px;
+	margin-top: 54px;
 	width: 100vw;
 	box-sizing: border-box;
 	@include stack(xs);
+	@include respond-to(m){
+		margin-top: 64px;
+	}
 
 	.img-wrapper {
 		width: 100vw;
